--- a/book-rating/src/app/app.component.html
+++ b/book-rating/src/app/app.component.html
@@ -1,5 +1,18 @@
 <div class="container">
   <h1>{{ title }}</h1>
 
-  <app-dashboard></app-dashboard>
+  <router-outlet></router-outlet>
 </div>
+
+
+<!--
+  Weiterleitung ✅
+  Navigation / Links
+    - BC => Detailseite
+    - Detailseite => Dashboard
+  Detailseite
+    - ISBN aus der URL aus
+    - HTTP: Buch laden
+    - Anzeige
+  Fehlerseite
+-->
