--- a/book-rating/src/app/books/book-details/book-details.component.html
+++ b/book-rating/src/app/books/book-details/book-details.component.html
@@ -1,1 +1,6 @@
 <p>book-details works!</p>
+
+<hr>
+
+<a routerLink="/books">Dashboard</a><br>
+<a routerLink="/books/9783864909467">Angular-Buch</a>
