--- a/book-rating/src/app/app.component.html
+++ b/book-rating/src/app/app.component.html
@@ -7,12 +7,12 @@
 
 <!--
   Weiterleitung ✅
-  Navigation / Links
+  Navigation / Links ✅
     - BC => Detailseite
     - Detailseite => Dashboard
   Detailseite
     - ISBN aus der URL aus
     - HTTP: Buch laden
     - Anzeige
-  Fehlerseite
+  Fehlerseite ✅
 -->
