--- a/book-rating/src/app/app.component.html
+++ b/book-rating/src/app/app.component.html
@@ -1,6 +1,11 @@
 <div class="container">
   <h1>{{ title }}</h1>
 
+  <nav>
+    <a routerLink="/books">Dashboard</a><br>
+    <a routerLink="/admin">Admin</a>
+  </nav>
+
   <router-outlet></router-outlet>
 </div>
 
