--- a/book-rating/src/app/books/book-create/book-create.component.html
+++ b/book-rating/src/app/books/book-create/book-create.component.html
@@ -1,1 +1,26 @@
-<p>book-create works!</p>
+<form>
+  <div class="form-group">
+    <label for="isbnInput">ISBN</label>
+    <input type="text" class="form-control" id="isbnInput">
+  </div>
+
+  <div class="form-group">
+    <label for="titleInput">Title</label>
+    <input type="text" class="form-control" id="titleInput">
+  </div>
+
+  <div class="form-group">
+    <label for="descriptionInput">Description</label>
+    <textarea class="form-control" id="descriptionInput"></textarea>
+  </div>
+
+  <div class="form-group">
+    <label for="ratingInput">Rating</label>
+    <input type="number" class="form-control" id="ratingInput">
+  </div>
+
+  <div class="form-group">
+    <label for="priceInput">Price</label>
+    <input type="number" class="form-control" id="priceInput">
+  </div>
+</form>
