--- a/book-rating/src/app/books/book-create/book-create.component.html
+++ b/book-rating/src/app/books/book-create/book-create.component.html
@@ -1,12 +1,12 @@
 <form>
   <div class="form-group">
     <label for="isbnInput">ISBN</label>
-    <input type="text" class="form-control" id="isbnInput">
+    <input type="text" class="form-control" name="isbn" [(ngModel)]="book.isbn" id="isbnInput">
   </div>
 
   <div class="form-group">
     <label for="titleInput">Title</label>
-    <input type="text" class="form-control" id="titleInput">
+    <input type="text" class="form-control" name="title" [(ngModel)]="book.title" id="titleInput">
   </div>
 
   <div class="form-group">
@@ -24,3 +24,6 @@
     <input type="number" class="form-control" id="priceInput">
   </div>
 </form>
+
+
+{{ book | json }}
