--- a/book-rating/src/app/books/book-create/book-create.component.html
+++ b/book-rating/src/app/books/book-create/book-create.component.html
@@ -1,26 +1,44 @@
-<form>
+<form [formGroup]="bookForm">
   <div class="form-group">
     <label for="isbnInput">ISBN</label>
-    <input type="text" class="form-control" id="isbnInput">
+    <input type="text" class="form-control" id="isbnInput" formControlName="isbn">
+    @if (isInvalid('isbn')) {<div class="feedback-error">Die ISBN ist fehlerhaft.</div>}
+
+    @if (hasError('isbn', 'required')) {<div class="feedback-error">Die muss angegeben werden.</div>}
+    @if (hasError('isbn', 'minlength')) {<div class="feedback-error">Die ISBN ist zu kurz.</div>}
+    @if (hasError('isbn', 'maxlength')) {<div class="feedback-error">Die ISBN ist zu lang.</div>}
+    @if (hasError('isbn', 'pattern')) {<div class="feedback-error">Die ISBN hat das falsche Format.</div>}
+
+    <pre>{{ bookForm.controls.isbn.errors | json }}</pre>
+
+    <!--
+      Ausblick zur Fehleranzeige:
+      <app-form-errors controlName="isbn" />
+      <app-form-errors controlName="isbn" [messages]="{ minlength: 'ZU KURZ!', myFancyError: 'FANCY' }"></app-form-errors>
+    -->
+
   </div>
 
   <div class="form-group">
     <label for="titleInput">Title</label>
-    <input type="text" class="form-control" id="titleInput">
+    <input type="text" class="form-control" id="titleInput" formControlName="title">
   </div>
 
   <div class="form-group">
     <label for="descriptionInput">Description</label>
-    <textarea class="form-control" id="descriptionInput"></textarea>
+    <textarea class="form-control" id="descriptionInput" formControlName="description"></textarea>
   </div>
 
   <div class="form-group">
     <label for="ratingInput">Rating</label>
-    <input type="number" class="form-control" id="ratingInput">
+    <input type="number" class="form-control" id="ratingInput" formControlName="rating">
   </div>
 
   <div class="form-group">
     <label for="priceInput">Price</label>
-    <input type="number" class="form-control" id="priceInput">
+    <input type="number" class="form-control" id="priceInput" formControlName="price">
   </div>
 </form>
+
+
+<pre>{{ bookForm.value | json }}</pre>
