--- a/book-rating/src/app/books/dashboard/dashboard.component.html
+++ b/book-rating/src/app/books/dashboard/dashboard.component.html
@@ -5,6 +5,7 @@
     [maxRating]="5"
     (rateUp)="doRateUp($event)"
     (rateDown)="doRateDown($event)"
+    (delete)="doDelete($event)"
     ></app-book>
 }
 
